--- a/pc2/Views/Home/Index.cshtml
+++ b/pc2/Views/Home/Index.cshtml
@@ -3,6 +3,33 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">LA PIRAÑA</h1>
+    <h2>Quiénes somos</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam quaerat expedita fugiat perferendis delectus eum
+        facere, nemo laudantium sunt ipsum tenetur, nam quasi ipsam fuga amet mollitia nostrum voluptatum beatae.</p>
+    <h2>Servicios y productos</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam blanditiis repellendus molestiae ipsum alias
+        amet iste impedit recusandae perferendis eveniet? Excepturi enim est, corrupti consequatur molestias vitae
+        minima et deserunt.</p>
+
+    <form action="post">
+        <div class="form-group">
+            <label for="">Nombres:</label>
+            <input type="text" class="form-control" id="">
+        </div>
+        <div class="form-group">
+            <label for="">Apellidos:</label>
+            <input type="text" class="form-control" id="">
+        </div>
+        <div class="form-group">
+            <label for="">Correo de contacto:</label>
+            <input type="email" class="form-control" id="">
+        </div>
+        <div class="form-group">
+            <label for="">Celular:</label>
+            <input type="number" class="form-control" id="">
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
+
 </div>
